Team Avengers/src/objects/Project_History__c.object
<CustomObject>
    <description>to track the previous projects of practitioners</description>
    <fields>
        <fullName>Practitioner_name__c</fullName>
        <label>Practitioner name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Project_name__c</fullName>
        <label>Previous Project name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>autonumber__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <label>Project History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>new</fullName>
        <columns>Previous_Project_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>new</label>
    </listViews>
    <nameField>
        <label>Project History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>